--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -110,8 +110,7 @@ RUN apt-get update && apt-get install -y \
 	rm -rf /var/lib/apt/lists/*
 
 # Install other useful Python packages using pip
-RUN pip --no-cache-dir install --upgrade ipython && \
-	pip --no-cache-dir install \
+RUN pip --no-cache-dir install \
 		Cython \
 		ipykernel \
 		jupyter \
