--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -26,7 +26,7 @@ RUN apt-get update && apt-get install -y \
 		liblcms2-dev \
 		libopenblas-dev \
 		liblapack-dev \
-		libopenjpeg \
+		libopenjpeg-dev \
 		libpng12-dev \
 		libssl-dev \
 		libtiff5-dev \
