--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -190,6 +190,7 @@ RUN pip --no-cache-dir install git+git://github.com/Lasagne/Lasagne.git@${LASAGN
 # Install Torch
 RUN git clone https://github.com/torch/distro.git /root/torch --recursive && \
 	cd /root/torch && \
+	sed -i -e 's/sudo//g' install-deps && \
 	bash install-deps && \
 	yes no | ./install.sh
 
