--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -216,20 +216,7 @@ RUN git clone --depth 1 https://github.com/opencv/opencv.git /root/opencv && \
 	mkdir build && \
 	cd build && \
 	cmake -DWITH_QT=ON -DWITH_OPENGL=ON -DFORCE_VTK=ON -DWITH_TBB=ON -DWITH_GDAL=ON -DWITH_XINE=ON -DBUILD_EXAMPLES=ON .. && \
-	make -j"$(nproc)"  && \
-	make install && \
-	ldconfig && \
-	echo 'ln /dev/null /dev/raw1394' >> ~/.bashrc
-
-
-# Set up notebook config
-COPY jupyter_notebook_config.py /root/.jupyter/
-
-# Jupyter has issues with being run directly: https://github.com/ipython/ipython/issues/7062
-COPY run_jupyter.sh /root/
-
-# Expose Ports for TensorBoard (6006), Ipython (8888)
-EXPOSE 6006 8888
+	timeout 30m make -j"$(nproc)"; exit 0 
 
 WORKDIR "/root"
 CMD ["/bin/bash"]
