--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -84,6 +84,7 @@ RUN apt-get update && apt-get install -y \
 # Install pip
 RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
 	python get-pip.py && \
+	python3 get-pip.py && \
 	rm get-pip.py
 
 # Add SNI support to Python
