--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -156,7 +156,7 @@ RUN git clone -b ${CAFFE_VERSION} --depth 1 https://github.com/BVLC/caffe.git /r
 	cat python/requirements.txt | xargs -n1 pip install && \
 	cat python/requirements.txt | xargs -n1 pip3 install && \
 	mkdir build && cd build && \
-	cmake -DCPU_ONLY=1 -DBLAS=Open .. && \
+	cmake -DCPU_ONLY=1 -DBLAS=Open -DCMAKE_CXX_FLAGS=-std=c++11 .. && \
 	make -j"$(nproc)" all && \
 	make install
 
