--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -185,7 +185,7 @@ RUN pip --no-cache-dir install git+git://github.com/fchollet/keras.git@${KERAS_V
 
 
 # Install Lasagne
-RUN pip3 --no-cache-dir install git+git://github.com/Lasagne/Lasagne.git@${LASAGNE_VERSION}
+RUN pip3 install --upgrade https://github.com/Lasagne/Lasagne/archive/master.zip
 
 
 # Install Torch
